fix: overflowing content for additional details

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -112,6 +112,12 @@ app-weather-summary {
 
     & app-forecast-details {
       grid-area: details;
+      overflow: scroll;
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
 
     app-city-details,
@@ -142,10 +148,12 @@ app-weather-summary {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    gap: $default-gap * 2;
 
     & img {
-      max-width: 192px;
-      max-height: 192px;
+      max-width: 8rem;
+      max-height: 8rem;
     }
   }
 
@@ -244,20 +252,20 @@ app-weather-summary {
   }
 }
 
-.panel-wrapper{
-  display:grid;
-  grid-template-columns: repeat(3,auto);
+.panel-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
   gap: 1rem;
 }
 
-.forecast-detailed-panel{
+.forecast-detailed-panel {
   display: inline-flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background: #C5D1EB;
 
-  & img{
+  & img {
     width: 64px;
     height: 64px;
   }
@@ -269,6 +277,6 @@ app-weather-summary {
   cursor: pointer;
 }
 
-.cursor-default{
+.cursor-default {
   cursor: default;
 }
